--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,49 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.0"
+    ext {
+        versions = [
+                'compileSdk': 30,
+                'minSdk': 21,
+                'targetSdk': 30,
+                'buildTools': '30.0.3'
+        ]
+        gradle_version = "4.2.2"
+
+        // Module App
+        coroutines_version = "1.5.2"
+        firebase_version = ""
+        gms_version = ""
+        kotlin_version = "1.5.0"
+        koin_version = "2.1.6"
+        lifecycle_version = "2.3.1"
+        multidex_version = "1.0.3"
+        navigation_version = "2.3.5"
+
+        // Module Common
+        appcompat_version = "1.3.1"
+        constraintlayout_version = "2.1.0"
+        glide_version = "4.11.0"
+        ktx_core_version = "1.6.0"
+        legacy_version = "1.0.0"
+        material_version = "1.4.0"
+        recyclerview_version = "1.2.1"
+        sdp_version = "1.0.6"
+        shimmer_version = "0.5.0"
+        touchimage_version = "3.1.0"
+
+        // Module Data
+        gson_version = "2.8.6"
+        logging_inter_version = "4.9.0"
+        retrofit_version = "2.9.0"
+    }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,8 +53,9 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven { url 'https://jitpack.io' }
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        jcenter()
     }
 }
 
