--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,41 +4,34 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdkVersion versions.compileSdk
+    buildToolsVersion versions.buildTools
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
+        minSdkVersion versions.minSdk
+        targetSdkVersion versions.targetSdk
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
 }
 
 dependencies {
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    api "androidx.appcompat:appcompat:$appcompat_version"
+    api "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    api "com.github.bumptech.glide:glide:$glide_version"
+    api "androidx.core:core-ktx:$ktx_core_version"
+    api "androidx.legacy:legacy-support-v4:$legacy_version"
+    api "com.google.android.material:material:$material_version"
+    api "androidx.recyclerview:recyclerview:$recyclerview_version"
+    api "com.intuit.sdp:sdp-android:$sdp_version"
+    api "com.intuit.ssp:ssp-android:$sdp_version"
+    api "com.facebook.shimmer:shimmer:$shimmer_version"
+    api "com.github.MikeOrtiz:TouchImageView:$touchimage_version"
 }
